# base_deseiraliser_image

./: README.md  dockerfile
XIMEA_SDK_Linux/: License.txt  README  README-xiCOP.txt  install  uninstall  version_LINUX_SP.txt
XIMEA_SDK_Linux/CamTool.64/: libQt5Multimedia.so.5  libQt5PrintSupport.so.5  libQt5Svg.so.5  libQt5Xml.so.5  libopenh264.so.0  xiCamTool
XIMEA_SDK_Linux/CamTool.64/camdesc/: camtool_limits.xml  xiapi_camera_description_FULL.xml
XIMEA_SDK_Linux/CamTool.arm64/: libQt5DBus.so.5  libQt5Multimedia.so.5  libQt5Network.so.5  libQt5PrintSupport.so.5  libQt5Svg.so.5  libQt5XcbQpa.so.5  libQt5Xml.so.5  libfreeimage.so.3  xiCamTool
XIMEA_SDK_Linux/api/Python/v2/ximea/: __init__.py  xiapi.py
XIMEA_SDK_Linux/data/: fw_update_tools_map.xml
XIMEA_SDK_Linux/examples/CamTool/xvpSample/include/xiCore/: AppDelegate.h  CameraManager.h  CameraParameters.h  CameraSource.h  DataSaver.h  ImageMetadata.h  PicBufAPI.h
XIMEA_SDK_Linux/examples/xiSampleDng/: xiSampleDng.cpp
XIMEA_SDK_Linux/include/: m3Api.h  m3Ext.h  xiapi_dng_store.h
XIMEA_SDK_Linux/libs/libraw1394/: readme.txt
XIMEA_SDK_Linux/libs/libraw1394/X32/: libraw1394.so.11.1.0  version_check
XIMEA_SDK_Linux/libs/libraw1394/X64/: libraw1394.so.11.1.0  version_check
XIMEA_SDK_Linux/libs/libusb/: 99-ximea.rules  libusb-1-increase_buffer_size.patch  readme-oldusb3.txt  readme.txt
XIMEA_SDK_Linux/libs/libusb/X32/: libusb-1.0.so.0.1.0
XIMEA_SDK_Linux/libs/libusb/X64/: libusb-1.0.so.0.1.0
XIMEA_SDK_Linux/libs/libusb/Xarm32/: libusb-1.0.so.0.1.0
XIMEA_SDK_Linux/libs/libusb/vanillaX32/: libusb-1.0.so.0.1.0  version_check
XIMEA_SDK_Linux/libs/libusb/vanillaX64/: libusb-1.0.so.0.1.0  version_check
XIMEA_SDK_Linux/libs/libusb/vanillaXarm32/: libusb-1.0.so.0.1.0  version_check
XIMEA_SDK_Linux/libs/libusb/vanillaXarm64/: libusb-1.0.so.0.1.0  version_check
XIMEA_SDK_Linux/samples/_libs/: os_common_header.h
XIMEA_SDK_Linux/samples/_libs/GenTL/: GenTLStream.cpp  GenTLStream.h  GenTL_ximea_custom.h  xi_GenTL.cpp  xi_GenTL.h  xi_ImgBuffer.cpp  xi_ImgBuffer.h  xi_exception.cpp  xi_exception.h
XIMEA_SDK_Linux/samples/_libs/_cmake/: add_executable.cmake  add_libtiff.cmake  add_opencv.cmake  add_xiapi.cmake
XIMEA_SDK_Linux/samples/_libs/xiAPI/: xiAPI_tiff.cpp  xiAPI_tiff.h
XIMEA_SDK_Linux/samples/_libs/xiAPIplus/: CMakeLists.txt  readme.txt  xiAPIplus_core.cpp  xiAPIplus_parameters.cpp  xiAPIplus_tiff.cpp  xiAPIplus_tiff.h  xiapiplus.h
XIMEA_SDK_Linux/samples/_libs/xiAPIplusOpenCV/: xiApiPlusOcv.cpp  xiApiPlusOcv.hpp
XIMEA_SDK_Linux/samples/xiAPI.NET.Core.2.2.cs/Capture-images/: Program.cs
XIMEA_SDK_Linux/samples/xiAPI.NET.Framework.4.7.2.cs/Capture-images-offline-processing/: Program.cs
XIMEA_SDK_Linux/samples/xiAPI.NET.Framework.4.7.2.cs/Capture-images-to-file/: Program.cs
XIMEA_SDK_Linux/samples/xiAPI.NET.Framework.4.7.2.cs/Capture-images-to-file-dng/: DNG.cs  Program.cs
XIMEA_SDK_Linux/samples/xiAPI.NET.Framework.4.7.2.vb/Capture-100-images-to-file/: Program.vb
XIMEA_SDK_Linux/samples/xiAPI/Capture-10-images/: CMakeLists.txt  main.cpp
XIMEA_SDK_Linux/samples/xiAPI/Capture-10-images-to-file/: CMakeLists.txt  main.cpp
XIMEA_SDK_Linux/samples/xiAPI/Capture-10-images-to-ram/: CMakeLists.txt  main.cpp
XIMEA_SDK_Linux/samples/xiAPI/Capture-50-images-gentl/: CMakeLists.txt  main.cpp  main_stream_based.cpp
XIMEA_SDK_Linux/samples/xiAPIplus/Capture-10-images/: CMakeLists.txt  build_sample.sh  main.cpp
XIMEA_SDK_Linux/samples/xiAPIplus/Capture-10-images-to-file/: CMakeLists.txt  main.cpp
XIMEA_SDK_Linux/samples/xiAPIplusOpenCV/Capture-50-images-and-display/: CMakeLists.txt  main.cpp
XIMEA_SDK_Linux/scripts/: install_steps
XIMEA_SDK_Linux/src/ximea_cam_pcie/: Makefile  PCIe_AbortStreaming.inc  enable_gpudirect.sh  pcie_common_fpga_regs.h  ximea_cam_pcie.c  ximea_cam_pcie.h
m2s2_ecal_deserializers-main/: CMakeLists.txt  README.md
m2s2_ecal_deserializers-main/include/m2s2/ecal/deserializer/: deserializer_bme280.hpp  deserializer_boson_img.hpp  deserializer_boson_raw.hpp  deserializer_livox.hpp  deserializer_radar.hpp  deserializer_realsense.hpp  deserializer_ximea.hpp  ideserializer.hpp  msgs.hpp
m2s2_ecal_deserializers-main/src/: .deserialize_livox.cpp.swp  deserialize_bme280.cpp  deserialize_flir_boson_img.cpp  deserialize_flir_boson_raw.cpp  deserialize_livox.cpp  deserialize_radar.cpp  deserialize_realsense.cpp  deserialize_ximea.cpp  ximea_measurement_read.cpp
